--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       <li class="about-item-1">
         <div class="about-image">
           <img
-            src="assets/branding-images/_ (1).jpeg"
+            src="assets/about/SophiaAboutImageTemp.JPG"
             width="800"
             height="800"
             alt="Your Photo"
