--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     <div class="holding-page-wrapper">
       <ul>
         <li class="animatedlogo">
-          <img src="assets/branding-images/Sophia_AnimLogo.svg" />
+          <img
+            src="assets/branding-images/Sophia_AnimLogo.svg"
+            alt="Sophia's Logo bouncing around"
+          />
         </li>
       </ul>
     </div>
