--- a/work.html
+++ b/work.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Sophia Spanos McGill | Illustration and Concept Art
-    </title>
+    <title>Sophia Spanos McGill | Illustration and Concept Art</title>
     <meta
       name="Sophia Spanos McGill | Illustration and Concept Art"
       content="The art of Sophia Spanos McGill, a Vancouver-based aspiring illustrator and concept artist with work focussing on the development of story-driven projects."
@@ -49,77 +47,74 @@
       </header>
       <div class="hero-headline-wrapper">
         <h3>THE ART OF</h3>
-        <h1 class=>SOPHIA SPANOS MCGILL</h1>
+        <h1>SOPHIA SPANOS MCGILL</h1>
       </div>
-  <section class="hero-footer">
-    <br>
-  </section>
+      <section class="hero-footer">
+        <br />
+      </section>
     </section>
 
     <main class="work-wrapper">
       <section class="portfolio">
         <ul class="grid">
-          <h2 class="work-title">MY WORK</h2>
+          <li><h2 class="work-title">MY WORK</h2></li>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
-              <a href="p1pthetemptation-1.html"><img
-                src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_pandora_render_09.jpg"
-                class="image-animation"
-                width="1920"
-                height="1080"
-                alt="Sophia Spanos McGill | The Temptation Character Design"
-              />
-            </a>
+              <a href="p1pthetemptation-1.html"
+                ><img
+                  src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_pandora_render_09.jpg"
+                  class="image-animation"
+                  width="1920"
+                  height="1080"
+                  alt="Sophia Spanos McGill | The Temptation Character Design"
+                />
+              </a>
             </figure>
-            <a href="p1pthetemptation-1.html">
-            </a>
+            <a href="p1pthetemptation-1.html"> </a>
           </li>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
               <a href="p2regulusrex.html">
-              <img
-                src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_weapon_design_07.jpg"
-                class="image-animation"
-                width="1920"
-                height="1080"
-                alt="Sophia Spanos McGill | Regulus Rex Character Design"
-              />
-            </a>
+                <img
+                  src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_weapon_design_07.jpg"
+                  class="image-animation"
+                  width="1920"
+                  height="1080"
+                  alt="Sophia Spanos McGill | Regulus Rex Character Design"
+                />
+              </a>
             </figure>
-            <a href="p2regulusrex.html">
-            </a>
+            <a href="p2regulusrex.html"> </a>
           </li>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
               <a href="p3handlebars.html">
-              <img
-                src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-town-location-design-10.jpg"
-                class="image-animation"
-                width="1920"
-                height="1080"
-                alt="Sophia Spanos McGill | Handlebars Concept Design"
-              />
-            </a>
+                <img
+                  src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-town-location-design-10.jpg"
+                  class="image-animation"
+                  width="1920"
+                  height="1080"
+                  alt="Sophia Spanos McGill | Handlebars Concept Design"
+                />
+              </a>
             </figure>
             <a href="p3handlebars.html">
-              <div class="overlay">
-              </div>
+              <div class="overlay"></div>
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
               <a href="p4prophecyofthephoenix.html">
-              <img
-                src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_art_08.jpg.jpg"
-                class="image-animation"
-                width="1920"
-                height="1080"
-                alt="Sophia Spanos McGill | Prophecy of the Phoenix Worldbuilding Concept"
-              />
-            </a>
+                <img
+                  src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_art_08.jpg.jpg"
+                  class="image-animation"
+                  width="1920"
+                  height="1080"
+                  alt="Sophia Spanos McGill | Prophecy of the Phoenix Worldbuilding Concept"
+                />
+              </a>
             </figure>
-            <a href="p4prophecyofthephoenix.html">
-            </a>
+            <a href="p4prophecyofthephoenix.html"> </a>
           </li>
         </ul>
       </section>
