--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <br />
         <p>
           I’m Sophia Spanos McGill, a Vancouver-based illustrator and animator.
-          I recently graduated from the IDEA program at Capilano University with
+          I am a fourth-year student at the IDEA program at Capilano University, getting
           a Bachelor of Visual Communication.
           <br />
           <br />
