--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
             >
           </li>
           <li class="social-item">
-            <a href="mailto:pandorus2000@gmail.com" target="_blank">Email</a>
+            <a href="mailto:sophiaspanosmcgill@gmail.com" target="_blank">Email</a>
           </li>
           </ul>
           <li class="footer-item-4">
