--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
           <li class="logo">
             <a href="index.html">
               <img
-                src="assets/branding-images/Sophia_HoverLogo.svg"
+                src="assets/branding-images/soph!-logo.svg"
                 alt="Sophia Spanos McGill Logo"
               />
             </a>
