more logo update!

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li class="animatedlogo">
           <img
-            src="assets/branding-images/Sophia_AnimLogo.svg"
+            src="assets/branding-images/soph!-logo.svg"
             alt="Sophia's Logo bouncing around"
           />
         </li>
