more logo updates

--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -31,7 +31,7 @@
         <li class="logo">
           <a href="index.html"
             ><img
-              src="assets/branding-images/Sophia_HoverLogo.svg"
+              src="assets/branding-images/soph!-logo.svg"
               alt="Sophia Spanos McGill logo"
           /></a>
         </li>
