--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -30,7 +30,7 @@
         <li><a href="work.html" class="custom-navigation">HOME</a></li>
         <li class="logo">
           <a href="index.html"
-            ><img src="assets/branding-images/Sophia_HoverLogo.svg"
+            ><img src="assets/branding-images/soph!-logo.svg"
           /></a>
         </li>
         <li><a href="about.html" class="custom-navigation">ABOUT</a></li>
