--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="icon"
-      href="assets/branding-images/SophsFavicon.svg"
+      href="assets/branding-images/soph!-logo.svg"
       type="image/svg+xml"
     />
   </head>
